<resources>
    <string name="app_name">10119239Latihan2</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="rhesus">Rhesus</string>
    <string name="password">Password</string>
    <string name="retype">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="job">Job</string>
    <string name="home_address">Home Address</string>
    <string name="def_loc">Default Location</string>
    <string name="agreement">Agree with Terms and Conditions</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="fb">CONNECT WITH FACEBOOK</string>
    <string name="register">doesn\'t have account?</string>
    <string name="btn_register">Register</string>
    <string name="title_almost">Almost There</string>
    <string name="desc_almost">Thank you for registering with us. One more step, you need to check your email to active your account</string>
    <string name="verify">VERIFY</string>
    <string name="title_verify">Verify your Account</string>
    <string name="desc_verify">We have send verification code to your email</string>
    <string name="code">enter verification code here...</string>
    <string name="send">SEND</string>
    <string name="no_code">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="nama">Dea Inesia Sri Utami</string>
    <string name="blood">Blood type: A</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
</resources>

<!--
    Tanggal     : Selasa, 26 April 2022
    Deskripsi   : Set string yang digunakan pada aplikasi
    NIM         : 10119239
    Nama        : Dea Inesia Sri Utami
    Kelas       : IF6
-->